--- a/src/app/advertisers/advertisers.component.html
+++ b/src/app/advertisers/advertisers.component.html
@@ -22,14 +22,14 @@
             <td mat-cell *matCellDef="let element"> {{element.telephone}} </td>
         </ng-container>
     
-            <!-- Address Column -->
-            <ng-container matColumnDef="address">
+        <!-- Address Column -->
+        <ng-container matColumnDef="address">
             <th mat-header-cell *matHeaderCellDef> Address </th>
             <td mat-cell *matCellDef="let element"> {{element.apiAddress?.address}} </td>
         </ng-container>
     
-            <!-- Postcode Column -->
-            <ng-container matColumnDef="postcode">
+        <!-- Postcode Column -->
+        <ng-container matColumnDef="postcode">
             <th mat-header-cell *matHeaderCellDef> Postcode </th>
             <td mat-cell *matCellDef="let element"> {{element.apiAddress?.postcode}} </td>
         </ng-container>
@@ -37,4 +37,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <button mat-raised-button color="primary" class="my-5" (click)="addAdvertiser()">Add Advertiser</button>
 </div>
