--- a/src/app/add-advertiser-dialog/add-advertiser-dialog.component.html
+++ b/src/app/add-advertiser-dialog/add-advertiser-dialog.component.html
@@ -1,7 +1,7 @@
 <div id="add-advertiser-dialog" class="container-fluid">
     <div class="row">
         <div class="col-2"></div>
-        <div class="col-8"><h1 class="text-center">Add Advertiser</h1></div>
+        <div class="col-8"><h3 class="text-center">Add Advertiser</h3></div>
         <div class="col-2 text-right">
             <button mat-button color="accent" inline="true" class="close-icon-button">
                 <i class="material-icons" (click)="onNoClick()">close</i>
@@ -9,12 +9,71 @@
         </div>
     </div>
 
-    <section mat-dialog-content>
+    <section mat-dialog-content class="text-center my-2">
+        <form [formGroup]="advertisersFormGroup" (ngSubmit)="createAdvertiser(advertisersFormGroup)">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Name of organisation</mat-label>
+                <input matInput placeholder="Name of organisation" formControlName="name" >
+                <mat-hint>Please enter the name of the organisation</mat-hint>
+            </mat-form-field>
 
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Organisation URL</mat-label>
+                <input matInput placeholder="Organisation URL" formControlName="orgurl" >
+                <mat-hint>Please enter url for the organisation</mat-hint>
+            </mat-form-field>
+
+            <div class="row">
+                <mat-form-field appearance="outline" class="col w-50">
+                    <mat-label>First name</mat-label>
+                    <input matInput placeholder="First name" formControlName="firstName" >
+                    <mat-hint>Please enter your first name</mat-hint>
+                </mat-form-field>
+    
+                <mat-form-field appearance="outline" class="col w-50">
+                    <mat-label>Last name</mat-label>
+                    <input matInput placeholder="Last name" formControlName="lastName" >
+                    <mat-hint>Please enter your last name</mat-hint>
+                </mat-form-field>
+            </div>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Email</mat-label>
+                <input matInput
+                       placeholder="email"
+                       formControlName="email"
+                       pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
+                <mat-hint>Please enter your email</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Telephone</mat-label>
+                <input matInput placeholder="Telephone" formControlName="telephone">
+                <mat-hint>Please enter your telephone</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Address</mat-label>
+                <input matInput placeholder="Address" formControlName="address">
+                <mat-hint>Please enter your address</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>City</mat-label>
+                <input matInput placeholder="City" formControlName="city">
+                <mat-hint>Please enter your city</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Postcode</mat-label>
+                <input matInput placeholder="postcode" formControlName="postcode">
+                <mat-hint>Please enter your postcode</mat-hint>
+            </mat-form-field>
+
+            <footer mat-dialog-actions class="my-3">
+                <button mat-button (click)="onNoClick()">Cancel</button>
+                <button mat-raised-button color="primary" class="ml-auto" [disabled]="advertisersFormGroup.invalid">Create</button>
+            </footer>
+        </form>
     </section>
-
-    <footer mat-dialog-actions>
-        <button mat-button (click)="onNoClick()">Cancel</button>
-        <button mat-raised-button color="primary" [mat-dialog-close]="" class="ml-auto" cdkFocusInitial>Create</button>
-    </footer>
 </div>
