made some css changes and made scroll in modal invisible

--- a/src/app/add-advertiser-dialog/add-advertiser-dialog.component.html
+++ b/src/app/add-advertiser-dialog/add-advertiser-dialog.component.html
@@ -1,9 +1,9 @@
 <div id="add-advertiser-dialog" class="container-fluid">
-    <div class="row">
+    <div class="row header py-3">
         <div class="col-2"></div>
         <div class="col-8"><h3 class="text-center">Add Advertiser</h3></div>
         <div class="col-2 text-right">
-            <button mat-button color="accent" inline="true" class="close-icon-button">
+            <button mat-button inline="true" class="close-icon-button">
                 <i class="material-icons" (click)="onNoClick()">close</i>
             </button>
         </div>
