--- a/src/app/advertisers/advertisers.component.html
+++ b/src/app/advertisers/advertisers.component.html
@@ -1,8 +1,9 @@
-
-
 <div id="advertisers" class="m-5">
     <header class="text-center mb-3">
-        <h1>Convertr</h1>
+        <h1>
+           <img src="https://www.convertr.io/wp-content/themes/Convertr/images/logos/cvtr-logo-primary-light.svg">
+           Convertr
+        </h1>
         <h6>Tech Test 2019</h6>
     </header>
     
@@ -42,5 +43,5 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <button mat-raised-button color="primary" class="my-5 float-right" (click)="addAdvertiser()">Add Advertiser</button>
+    <button mat-raised-button color="primary" class="my-3 float-right" (click)="addAdvertiser()">Add Advertiser</button>
 </div>
