--- a/src/app/advertisers/advertisers.component.scss
+++ b/src/app/advertisers/advertisers.component.scss
@@ -1,4 +1,10 @@
 #advertisers {
+
+    header img {
+        width: 140px;
+        margin-right: -110px;
+    }
+
     table th {
         background-color: black;
         color: white;
