--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "~material-design-icons/iconfont/material-icons.css";
+
+html {
+    overflow: scroll;
+}
+
+button {
+    outline: none !important;
+}
+
